--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,4 @@
 @import './components/preview/index.scss';
 @import './components/saveAs/index.scss';
+@import './components/prep/index.scss';
+@import './components/form/index.scss';
