--- a/src/components/preview/index.scss
+++ b/src/components/preview/index.scss
@@ -1,66 +1,70 @@
 .preview-component {
-  max-width: 320px;
-  max-height: 480px;
+  border-radius: 15px;
+  //   height: 90vh;
+
+  //   width: 60vh;
+  //   max-height: 900px;
+  //   max-width: 600px;
+  height: 480px;
+  width: 320px;
 }
 
 .main-preview {
   border-radius: 10px;
   width: inherit;
   height: inherit;
-  padding: calc(60vh * 0.06) calc(60vh * 0.064) calc(66vh * 0.13);
+  // padding: calc(60vh * 0.06) calc(60vh * 0.064) calc(66vh * 0.13);
   background-color: rgb(196, 240, 171);
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  &-preview-content,
-  &-header,
-  .text,
-  &-button {
-    padding-left: 1em;
-    padding-right: 1em;
-  }
+  flex-direction: column-reverse;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-bottom: 2em;
+
   &-content {
-    align-self: flex-end;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    min-height: 40%;
   }
 
   &-header {
     display: flex;
     h1 {
+      padding: 0;
       margin: 0;
       color: #111;
-      font-size: calc(60vh * 0.09);
-      line-height: calc(60vh * 0.09 + 4px);
+      font-size: calc(1vw + 1em);
+      line-height: calc(1vh + 1em);
       font-weight: bold;
       letter-spacing: -1px;
-      text-align: left;
-      align-self: flex-end;
-      vertical-align: text-top;
+      align-self: flex-start;
     }
   }
-
-  .text {
+  &-parag {
     margin-top: 0.4em;
-    font-size: calc(60vh * 0.042);
+    font-size: calc(1vw + 0.4em);
     text-align: start;
-    display: block; /* or inline-block */
+    display: block;
     text-overflow: ellipsis;
     word-wrap: break-word;
     overflow: hidden;
-    max-height: 5.4em;
-    line-height: 1.8em;
+    max-height: 4.8em;
+    line-height: 1.6em;
   }
+
   p {
     text-align: start;
   }
   &-button {
-    margin-top: 1em;
+    padding-top: 0.5em;
     height: 2em;
     button {
+      height: inherit;
       font-size: 1.4em;
-      border-radius: 10px;
+      border-radius: 5px;
       border: none;
       background-color: #a169f7;
-      height: inherit;
       width: 100%;
     }
   }
