--- a/src/components/prep/index.scss
+++ b/src/components/prep/index.scss
@@ -1,8 +1,12 @@
 .prep-wrapper {
   width: 360px;
 }
+.myHeader {
+  text-align: center;
+}
 .prep {
-  border-radius: 10px;
+  margin-top: 2em;
+
   background-color: #bce8ef;
   display: flex;
   justify-content: space-around;
