--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,20 @@
 .App {
-  width: 1200px;
   border-radius: 10px;
   margin: 0 auto;
+  margin-top: 3em;
   display: flex;
   justify-content: center;
   background-color: #aed6dc;
 }
 .left-side {
+  border: 1px solid rgb(129, 129, 129);
+  border-radius: 10px;
   margin-right: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.right-side {
+  border: 1px solid rgb(129, 129, 129);
+  border-radius: 10px;
 }
