--- a/src/components/saveAs/index.scss
+++ b/src/components/saveAs/index.scss
@@ -1,10 +1,10 @@
 .saveas-wrapper {
   width: 320px;
-  margin-top: 100px;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 .saveas-main {
   text-align: center;
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
   background-color: #bce8ef;
