--- a/src/components/background/index.scss
+++ b/src/components/background/index.scss
@@ -6,10 +6,11 @@
 }
 .prep {
   margin-top: 2em;
-
   background-color: #bce8ef;
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+
+  align-items: center;
   &-col {
     display: flex;
     flex-direction: column;
@@ -22,4 +23,10 @@
     height: 3em;
     border-radius: 10px;
   }
+}
+.color-pickers {
+  display: none;
+  width: inherit;
+  display: flex;
+  flex-direction: row;
 }
