--- a/src/components/preview/index.scss
+++ b/src/components/preview/index.scss
@@ -1,13 +1,7 @@
 .preview-component {
   border-radius: 15px;
-
-  //   height: 90vh;
-
-  //   width: 60vh;
-  //   max-height: 900px;
-  //   max-width: 600px;
-  height: 480px;
   width: 320px;
+  height: 480px;
 }
 
 .main-preview {
@@ -15,22 +9,21 @@
   border-radius: 10px;
   width: inherit;
   height: inherit;
-  // padding: calc(60vh * 0.06) calc(60vh * 0.064) calc(66vh * 0.13);
   background-color: rgb(196, 240, 171);
   display: flex;
   flex-direction: column-reverse;
-  // padding-left: 1em;
-  // padding-right: 1em;
-  // padding-bottom: 2em;
+  position: absolute;
+  z-index: 1;
   &-image {
+    z-index: 2;
+    position: absolute;
+    width: 100%;
     background-repeat: no-repeat;
     background-position: top;
     box-sizing: border-box;
     border-radius: 10px;
     width: inherit;
     height: inherit;
-    // padding: calc(60vh * 0.06) calc(60vh * 0.064) calc(66vh * 0.13);
-    // background-color: rgb(196, 240, 171);
     display: flex;
     flex-direction: column-reverse;
     padding-left: 1em;
@@ -83,5 +76,28 @@
       background-color: #a169f7;
       width: 100%;
     }
+  }
+}
+
+.saveas-wrapper {
+  width: 320px;
+  margin-top: 1em;
+  margin-bottom: 1em;
+}
+.saveas-main {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: #bce8ef;
+  &-element {
+    margin-left: 1em;
+    margin-right: 1em;
+    padding-bottom: 1em;
+  }
+  button {
+    border-radius: 10px;
+    border: 1px dotted gray;
+    height: 1.7em;
+    width: 100%;
   }
 }
