--- a/src/components/background/index.scss
+++ b/src/components/background/index.scss
@@ -13,12 +13,12 @@
   align-items: flex-start;
   padding: 0.5em;
   &-element {
-    margin-top: 1em;
+    width: 100%;
+    background-color: #aed6dc;
+    color: black;
+    padding: 0.5rem;
+    border-radius: 0.3rem;
     margin-bottom: 1em;
-    font-size: 0.8em;
-    width: 11em;
-    height: 3em;
-    border-radius: 10px;
   }
 }
 .color-pickers {
@@ -39,7 +39,7 @@
     padding: 0 !important;
   }
 }
-
+//делаем непрозрачный градиент пикер
 .popover {
   background-color: white;
 }
