--- a/src/components/preview/index.scss
+++ b/src/components/preview/index.scss
@@ -78,6 +78,8 @@
       border: none;
       background-color: #a169f7;
       width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
     }
   }
 }
