--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 .App {
   background-color: #aed6dc;
   height: inherit;
+  font-family: 'Roboto', sans-serif;
 }
 .app-wrapper {
   border-radius: 10px;
