added image positioning

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
-.App {
+html {
   background-color: #aed6dc;
-  height: inherit;
+}
+.App {
   font-family: 'Roboto', sans-serif;
 }
 .app-wrapper {
