--- a/src/components/background/index.scss
+++ b/src/components/background/index.scss
@@ -21,6 +21,11 @@
     margin-bottom: 1em;
   }
 }
+.setImagePosition {
+  input {
+    margin: 0.4rem;
+  }
+}
 .color-pickers {
   display: none;
   width: inherit;
